--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tic-Tac-Toe</title>
+    
     <link rel="stylesheet" href="styles.css">
+<meta name="google-site-verification" content="_Tl1lNgbiqKt77nRQ3cgDKndgWajeyI_SlnmgsmMXHs" />
 </head>
+    
 <body>
     <h1>Tic-Tac-Toe</h1>
     <div class="message" id="message">Player X's Turn</div>
